--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,13 +30,13 @@
             </intent-filter>
         </activity>
         <activity android:name=".NumbersActivity"
-            android:label="Numbers"/>
+            android:label="@string/category_numbers"/>
         <activity android:name=".PhrasesActivity"
-            android:label="Phrases"/>
+            android:label="@string/category_phrases"/>
         <activity android:name=".FamilyActivity"
-            android:label="Family Members"/>
+            android:label="@string/category_family"/>
         <activity android:name=".ColorsActivity"
-            android:label="Colors"></activity>
+            android:label="@string/category_family" />
     </application>
 
 </manifest>
