--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
         <activity android:name=".FamilyActivity"
             android:label="@string/category_family"/>
         <activity android:name=".ColorsActivity"
-            android:label="@string/category_family" />
+            android:label="@string/category_colors" />
     </application>
 
 </manifest>
